--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,10 @@ header h2 {
 .carousel {
     border: solid #031757;
 }
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+}
